--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,14 +4,14 @@
 
 @font-face {
     font-family: "inconsolata";
-    src: url("/assets/fonts/inconsolata/Inconsolata-VariableFont_wdth,wght.ttf") format("truetype");
+    src: url("./assets/fonts/inconsolata/Inconsolata-VariableFont_wdth,wght.ttf") format("truetype");
     font-weight: "400";
     font-style: "normal";
 }
 
 @layer base {
     html {
-        @apply font-sans antialiased;
+        @apply font-custom antialiased;
     }
 
     body {
