Added effect and shadow to correct section clicked. Added smooth scroll to click section.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@
 @layer base {
     html {
         @apply font-custom antialiased;
+        scroll-behavior: smooth;
     }
 
     body {
@@ -27,7 +28,7 @@
     }
 
     a {
-        @apply no-underline;
+        @apply no-underline text-secondary;
     }
 
     p {
