--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -5,11 +5,12 @@
 @font-face {
     font-family: "inconsolata";
     src: url("./assets/fonts/inconsolata/Inconsolata-VariableFont_wdth,wght.ttf") format("truetype");
-    font-weight: "400";
+    font-weight: 400;
     font-style: "normal";
 }
 
 @layer base {
+    /* Layer utile per definire gli stili primari del sito, come html, body, h1, ecc.. */
     html {
         @apply font-custom antialiased;
         scroll-behavior: smooth;
@@ -17,6 +18,8 @@
 
     body {
         @apply min-h-screen flex flex-col bg-primary text-secondary text-xl;
+        /* TODO: da vedere se utile dopo, questa variabile CSS personalizzata serve a dare un'altezza fissa all'header da utilizzare anche in altri file CSS.  */
+        /* --header-padding-height: 1.5rem; */
     }
 
     h1 {
@@ -37,4 +40,5 @@
 }
 
 @layer components {
+    /* Layer utile per definire classi personalizzate da riutilizzare nei componenti. */
 }
