--- a/apps/frontend/src/components/FatalError/FatalError.css
+++ b/apps/frontend/src/components/FatalError/FatalError.css
@@ -1,5 +1,6 @@
 .container {
-    @apply fixed inset-0 flex items-center justify-center bg-black;
+    /* @apply flex w-full flex-col justify-center items-center min-h-screen; */
+    @apply flex flex-col justify-center items-center;
 }
 
 .icon {
