Fixed tailwind problem into main index.css. Added default margin into main index.css. Added const for error. Endend fatal error screen. Edited for now the default reducer language to IT.

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -4,6 +4,7 @@
 
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
 /* Custom font */
 @font-face {
@@ -149,7 +150,6 @@
         - border-collapse ensures table borders merge properly.
     */
     table {
-        
     }
 
     /*
@@ -176,7 +176,19 @@
 }
 
 @layer components {
+    .defaultMarginTop {
+        @apply mb-3;
+    }
+
+    .defaultMarginRight {
+        @apply mb-3;
+    }
+
     .defaultMarginBottom {
+        @apply mb-3;
+    }
+
+    .defaultMarginLeft {
         @apply mb-3;
     }
 }
