--- a/apps/frontend/src/components/FatalError/FatalError.css
+++ b/apps/frontend/src/components/FatalError/FatalError.css
@@ -1,13 +1,3 @@
-.container {
-    /* @apply flex w-full flex-col justify-center items-center min-h-screen; */
-    @apply flex flex-col justify-center items-center;
-}
-
-.icon {
-}
-
-.title {
-}
-
-.description {
+.flexColumn {
+    @apply flex flex-col items-center justify-center;
 }
