Fixed fields from strapi API. Fixed animation problem from 2 to 1 step. Ended gender reveal homepage. Ended 2 step. Started 3 step.

--- a/apps/frontend/src/pages/GenderReveal/GenderReveal.css
+++ b/apps/frontend/src/pages/GenderReveal/GenderReveal.css
@@ -9,7 +9,7 @@
 .mainContainer {
     background-color: #2270a0;
     font-family: "fredoka";
-    @apply flex flex-col w-full max-w-full h-screen overflow-x-hidden;
+    @apply flex flex-col w-full max-w-full h-screen overflow-x-hidden p-4 text-center;
 }
 
 .bodyContainer {
